add: fusiond ebug fix